--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,10 @@ file_names_to_ignore:
   - .DS_Store
 
 folder_names_to_ignore:
-  - "@eaDir"
-  - .Trashes
-  - .TemporaryItems
-  - .DocumentRevisions-V100
-  - .Spotlight-V100
-#  - .stversions
+  - "@eaDir"                # Synology
+  - "@__thumb"              # QNAP
+  - .Trashes                # macOS
+  - .TemporaryItems         # macOS
+  - .DocumentRevisions-V100 # macOS
+  - .Spotlight-V100         # macOS
+#  - .stversions             # Syncthing
