--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ max_concurrent_file_operations: 10
 
 file_names_to_ignore:
   - .DS_Store
+  - Thumbs.db
 
 folder_names_to_ignore:
   - "@eaDir"                # Synology
